# finisterra

./: .gitignore  Cargo.toml  README.md  argentum
.github/workflows/: ci.yml
art/: clothing-tall.aseprite  dwarf-model.aseprite  elf-model.aseprite  heads.aseprite  helmets.aseprite  human-model.aseprite  races.aseprite  shields.aseprite  skeleton-model-south.aseprite  skeleton-model-south2.aseprite  skeleton-model.aseprite  top-down-test-Recovered-Recovered.aseprite  top-down-test.aseprite  weapon-model.aseprite  weapons.aseprite
art/bodies/: drow.aseprite  dwarf.aseprite  elf.aseprite  human.aseprite
art/helmets/: ao-helmet.aseprite
art/human/: armors.aseprite  body.aseprite  head.aseprite
art/scripts/: export-body.lua  export-clothing.lua  export-equipment.lua  export-heads.lua  export-helmet.lua  export-metadata.lua  fs.lua  (+4 more)
crates/argentum/: Cargo.toml
crates/argentum/src/: client.rs  lib.rs  server.rs
crates/argentum/src/ao_20/: mod.rs
crates/argentum/src/ao_20/client/: mod.rs  template.rs
crates/argentum/src/ao_20/maps/: mod.rs
crates/argentum/src/ao_99z/client/: mod.rs
crates/argentum/src/types/: animations.rs  atlas.rs  body.rs  city.rs  head.rs  heading.rs  image.rs  map.rs  mod.rs  shield.rs  weapon.rs
crates/argentum/src/types/animations/: fx.rs
crates/argentum/src/types/character/: direction.rs
crates/client/: Cargo.toml
crates/client-roma/: Cargo.toml
crates/client-roma/src/: entity.rs  input.rs  lib.rs  main.rs  resources.rs  settings.rs
crates/client/assets/: assets.yml
crates/client/assets/categories/clothes/cloth-0/: animations.yml  images.yml
crates/client/assets/categories/ground/grass/: images.yml
crates/client/assets/maps/: 2x2.yml
crates/client/src/: app.rs  connection.rs  entity.rs  error.rs  game.rs  input.rs  lib.rs  main.rs  maps.rs  resources.rs  screens.rs  texture.rs  ui.rs  z_ordering.rs
crates/client/src/app/: atlas.rs  resources.rs  window.rs
crates/client/src/argentum/: animations.rs  mod.rs
crates/client/src/argentum/character/: animation.rs  animator.rs  mod.rs
crates/client/src/finisterra/: mod.rs
crates/client/src/finisterra/world/: entity.rs  input.rs  mod.rs  ui.rs  z_ordering.rs
crates/client/src/game/: camera.rs  draw.rs  entity.rs  update.rs
crates/client/src/networking/: connection.rs
crates/client/src/render/: components.rs  mod.rs  renderer.rs  systems.rs
crates/client/src/screens/: account.rs  character_creation.rs  home.rs  loading.rs  world.rs
crates/client/src/screens/world/: depth.rs  entity.rs  fps.rs  input.rs  interpolation.rs  map.rs  movement.rs  prediction.rs  reconciliation.rs
crates/client/src/screens/world/hud/: console.rs  inventory.rs  mod.rs  spellbook.rs
crates/client/src/startup/: systems.rs
crates/client/src/ui/: bar.rs  button.rs  colors.rs  console.rs  fonts.rs  image.rs  input_field.rs  inventory.rs  label.rs  mod.rs  spellbook.rs  texture.rs  textures.rs
crates/database/: Cargo.toml
crates/database/migrations/: 20240209033157_accounts.sql  20240210051007_account_characters.sql
crates/database/src/: lib.rs  model.rs  types.rs
crates/database/src/models/asd/: account_characters.rs  account_characters_db_set.rs  accounts.rs  accounts_db_set.rs  character_attributes.rs  character_attributes_db_set.rs  character_equipment.rs  character_equipment_db_set.rs  character_inventories.rs  character_inventories_db_set.rs  character_skills.rs  character_skills_db_set.rs  character_spellbooks.rs  character_spellbooks_db_set.rs  character_statistics.rs  character_statistics_db_set.rs  character_vaults.rs  character_vaults_db_set.rs  characters.rs  characters_db_set.rs  mod.rs
crates/definitions/: Cargo.toml
crates/definitions/src/: client.rs  error.rs  lib.rs  parse.rs
crates/definitions/src/ao_20/: mod.rs
crates/definitions/src/ao_20/client/: mod.rs
crates/definitions/src/ao_20/graphics/: mod.rs  parse.rs
crates/definitions/src/ao_20/init/: mod.rs
crates/definitions/src/ao_20/init/parse/: body.rs  head.rs  mod.rs  template.rs  weapon.rs
crates/definitions/src/ao_20/maps/: parse.rs
crates/definitions/src/ao_99z/client/: mod.rs
crates/definitions/src/ao_libre/: graphics.rs  maps.rs  mod.rs
crates/definitions/src/types/: animation.rs  atlas.rs  body.rs  city.rs  class.rs  fx.rs  gear.rs  head.rs  heading.rs  image.rs  map.rs  mod.rs  npc.rs  object.rs  race.rs  shield.rs  spell.rs  weapon.rs
crates/engine/: Cargo.toml  README.md
crates/engine/implementations/roma/: Cargo.toml  README.md
crates/engine/implementations/roma/src/: camera.rs  fonts.rs  lib.rs  state.rs  texture.rs
crates/engine/implementations/roma/src/renderer/: sprite_batch_renderer.rs  sprite_batch_renderer_shader.wgsl  texture_array.rs  texture_array_renderer.rs  texture_array_renderer_shader.wgsl  textures.rs
crates/engine/src/: camera.rs  draw.rs  engine.rs  game.rs  input.rs  lib.rs  logging.rs  settings.rs  sound.rs  window.rs
crates/roma/: Cargo.toml
crates/roma/src/: assets.rs  camera.rs  draw.rs  files.rs  font.rs  fonts.rs  graphics.rs  images.rs  input.rs  lib.rs  main.rs  render.rs  renderer.rs  roma.rs  settings.rs  state.rs  texture.rs
crates/roma/src/graphics/: camera.rs  rect.rs  texture_array.rs  textures.rs  vec2.rs
crates/roma/src/image_renderer/: image.wgsl  mod.rs  texture.rs
crates/roma/src/render/: camera.rs  indexing.rs  mod.rs  render_pass.rs  renderer.rs  sprite_batch.rs  state.rs  texture.rs  texture_array.rs  textures.rs  vertex.rs
crates/roma/src/render/shaders/: indexing.wgsl  non_uniform_indexing.wgsl  shader.wgsl
crates/roma/src/renderer/: fonts.rs  image.rs  mod.rs  queue.rs  shader.wgsl  sprite_batch.rs  sprite_batch_renderer.rs  sprite_batch_renderer_shader.wgsl  texture.rs  texture_array.rs  texture_array_renderer.rs  texture_array_renderer_shader.wgsl  textures.rs
crates/roma/src/renderer/fonts/: font.fnt  font.json  shadowed-font-x2.fnt
crates/roma/src/resources/: camera.rs  mod.rs  text_brush.rs  texture.rs
old_art/: drow-elf-model.aseprite  human-model.aseprite  races.aseprite  skeleton-model.aseprite
(+1071 files in other folders)
