[workspace]
members = ["crates/*", "crates/engine/implementations/*"]
resolver = "2"

[workspace.dependencies]
roma = { path = "crates/engine/implementations/roma" }
engine = { path = "crates/engine" }
database = { path = "crates/database" }
shared = { path = "crates/shared" }

winit = "0.29"
# async runtime
tokio = { version = "1", features = ["full"] }

# serializetion
bincode = { git = "https://github.com/bincode-org/bincode.git", tag = "v2.0.0-rc.3" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
toml = "0.8"
ron = "0.8"

# misc
log = "0.4"
rand = { version = "0.8", features = ["std", "std_rng"] }
rustc-hash = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# networking
webtransport = "0"
wtransport = { version = "0.1", features = ["dangerous-configuration"] }

# [profile.release]
# debug = true
