[package]
name = "argentum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
rust-ini = "0.21"
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
ron.workspace = true
rustc-hash.workspace = true
bincode.workspace = true
