[package]
name = "client-roma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roma-wgpu = { path = "../../../roma/crates/roma-wgpu" } 
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
rand = { version = "0.8", features = ["std", "std_rng"] }
ao = { path = "../../../ao-rs" }
