[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
definitions.workspace = true
roma.workspace = true
engine.workspace = true
serde.workspace = true
toml.workspace = true
rand.workspace = true
rustc-hash.workspace = true
lazy_static = "1.4"
itertools = "0.12"
random_name_generator = "0.3.6"
