[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
wtransport.workspace = true
roma.workspace = true
engine.workspace = true
shared.workspace = true
serde.workspace = true
serde_with.workspace = true
ron.workspace = true
rand.workspace = true
rustc-hash.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

once_cell = "1.19"
lru = "0.12"
image = "0.25"
nohash-hasher = "0.2"
tokio-util = "0.7"
lazy_static = "1.4"
itertools = "0.12"
interpolation = "0.3"
