[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
serde = { version = "1.0.193", features = ["derive"] }
