[package]
name = "definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
rust-ini = "0.19"
serde.workspace = true
toml.workspace = true
rustc-hash.workspace = true
itertools = "0.10"
