[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# winit
winit.workspace = true

tracing-subscriber.workspace = true

# runtime
bytemuck = { version = "1.12", features = ["derive"] }

# logging
log = "0.4"

# text
bmfont = { version = "0.3", default-features = false, features = [
  "serde",
  "serde_json",
] }
