[package]
name = "roma"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
wgpu = "0.16"
pollster = "0.3"
cgmath = "0.18"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"
winit_input_helper = "0.14"
derive_builder = "0.12"
bmfont = { version = "0.3", features = ["serde", "serde_json"] }
rustc-hash.workspace = true

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
