[package]
name = "roma"
version = "0.1.0"
edition = "2021"

[dependencies]
# WGPU
wgpu = "0.17.1"
cgmath = "0.18"
bytemuck = { version = "1.12", features = ["derive"] }

# winit
winit = "0.28.1"
winit_input_helper = "0.14"

# ui
yakui = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "6ebe4e5" }
yakui-wgpu = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "6ebe4e5" }
yakui-winit = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "6ebe4e5" }

# runtime
pollster = "0.3"

# misc
anyhow = "1.0"
rand = "0.8"

# fonts
bmfont = { version = "0.3", default-features = false, features = [
  "serde",
  "serde_json",
] }

# performance
smol_str = "0.2"
smallvec = "1.10"
lru = "0.12"
nohash-hasher = "0.2"
# rustc-hash.workspace = true

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[profile.release]
debug = 1
