[package]
name = "roma"
version = "0.1.0"
edition = "2021"

[dependencies]
engine.workspace = true
pollster.workspace = true
log.workspace = true

# WGPU
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "56d9d32a072fd9d6bfc5bcb6c0fa0d5091fbd9c9" }
cgmath = "0.18"
bytemuck = { version = "1.12", features = ["derive"] }

# winit
winit.workspace = true
winit_input_helper = "0.15"

# fonts
bmfont = { version = "0.3", default-features = false, features = [
  "serde",
  "serde_json",
] }

image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
] }

# performance
nohash-hasher = "0.2"
rustc-hash = "1.1"
