[package]
name = "roma"
version = "0.1.0"
edition = "2021"

[dependencies]
engine.workspace = true
log.workspace = true
tokio.workspace = true

# WGPU
wgpu = "0.19"
cgmath = "0.18"
bytemuck = { version = "1.12", features = ["derive"] }

# winit
winit.workspace = true

# fonts
bmfont = { version = "0.3", default-features = false, features = [
  "serde",
  "serde_json",
] }

image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }

# performance
nohash-hasher = "0.2"
